--- a/README
+++ b/README
@@ -8,3 +8,5 @@ to run it locally:
     bundle
     foreman start
 
+
+note: http://blog.blazingcloud.net is hosted at Media Temple and is implemented in WordPress
