nav underline spacing fixed

--- a/README
+++ b/README
@@ -29,3 +29,12 @@ deploy to staging:
   url to staging: http://blazingcloud-staging.herokuapp.com/
 
 --
+production setup:
+  
+  git remote add production git@heroku.com:blazingcloud.git
+  
+deploy to production:
+
+  git push production master
+  
+--
